tests-integration/fixtures/checking/155_derive_profunctor_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
WrongFirst ::
  forall (a :: Type) (b :: Type). (a :: Type) -> (b :: Type) -> WrongFirst (a :: Type) (b :: Type)
WrongSecond ::
  forall (a :: Type) (b :: Type).
    ((b :: Type) -> (a :: Type)) -> WrongSecond (a :: Type) (b :: Type)

Types
WrongFirst :: Type -> Type -> Type
WrongSecond :: Type -> Type -> Type

Data
WrongFirst
  Quantified = :0
  Kind = :0

WrongSecond
  Quantified = :0
  Kind = :0


Roles
WrongFirst = [Representational, Representational]
WrongSecond = [Representational, Representational]

Derived
derive Profunctor (WrongFirst :: Type -> Type -> Type)
derive Profunctor (WrongSecond :: Type -> Type -> Type)

Diagnostics
error[CovariantOccurrence]: Type variable occurs in covariant position: (~a :: Type)
  --> 7:1..7:38
  |
7 | derive instance Profunctor WrongFirst
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (~b :: Type)
  --> 11:1..11:39
   |
11 | derive instance Profunctor WrongSecond
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CovariantOccurrence]: Type variable occurs in covariant position: (~a :: Type)
  --> 11:1..11:39
   |
11 | derive instance Profunctor WrongSecond
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
